Adding new style

--- a/projects.html
+++ b/projects.html
@@ -74,7 +74,7 @@ Author URL: http://w3layouts.com
 
             <section id="content1" class="tab-content text-left">
                 <div class="d-grid grid-col-3">
-                    <div class="product">
+                    <div class="product card-pro">
                       <a href="assets/images/project1.PNG" data-lightbox="example-set">
                         <figure>
                             <img src="assets/images/project1.PNG" class="img-responsive" alt="" />
@@ -86,7 +86,7 @@ Author URL: http://w3layouts.com
                       </p>
                         
                     </div>
-                    <div class="product">
+                    <div class="product card-pro">
                         <a href="assets/images/project2.png" data-lightbox="example-set">
                             <figure>
                                 <img src="assets/images/project2.png" class="img-responsive" alt="" />
