Add new project

--- a/projects.html
+++ b/projects.html
@@ -75,12 +75,25 @@ Author URL: http://w3layouts.com
             <section id="content1" class="tab-content text-left">
                 <div class="d-grid grid-col-3">
                     <div class="product card-pro">
+                      <a href="https://github.com/superXdev/cnotepad/raw/main/CNotepad/images/1.PNG" data-lightbox="example-set">
+                        <figure>
+                            <img src="https://github.com/superXdev/cnotepad/raw/main/CNotepad/images/1.PNG" class="img-responsive" alt="" />
+                        </figure>
+                      </a>
+                      <h5><a href="https://github.com/superXdev/cnotepad">CNotepad | Cryptographic Notepad</a></h5>
+                      <p>
+                        <span class="stack-badge">C#</span>
+                      </p>
+                        
+                    </div>
+
+                    <div class="product card-pro">
                       <a href="assets/images/pro4.png" data-lightbox="example-set">
                         <figure>
                             <img src="assets/images/pro4.png" class="img-responsive" alt="" />
                         </figure>
                       </a>
-                      <h5><a href="https://github.com/superXdev/Game-batu-gunting-kertas">ToDoApp | to-do-list web</a></h5>
+                      <h5><a href="https://todoapp-fikridev.herokuapp.com/">ToDoApp | to-do-list web</a></h5>
                       <p>
                         <span class="stack-badge">Python</span> <span class="stack-badge">Django</span> <span class="stack-badge">Bootstrap</span>
                       </p>
